Remove app from title

--- a/EBank_App/About.cshtml
+++ b/EBank_App/About.cshtml
@@ -5,7 +5,7 @@
 
 <hgroup class="title">
     <h1>@Page.Title.</h1>
-    <h2>Your app description page.</h2>
+    <h2>Your description page.</h2>
 </hgroup>
 
 <article>
